--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.5.3'
+
+        classpath'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
     }
 }
 
