--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,11 +25,11 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation project(path: ':library')
+    implementation project(path: ':brvahlibrary')
     implementation project(':material-spinner-1.0.5')
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.kyleduo.switchbutton:library:2.0.0'
     implementation 'com.orhanobut:logger:2.2.0'
 }
